--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thunder</title>
-<script type="module" src="/_assets/index.1350ef69.js"></script>
-<link rel="stylesheet" href="/_assets/style.6e96eec3.css">
+<script type="module" src="/thunder/_assets/index.1350ef69.js"></script>
+<link rel="stylesheet" href="/thunder/_assets/style.6e96eec3.css">
 </head>
 <body>
   <div id="root"></div>
